# callai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  README.zh.md  SECURITY.md  index.html  justfile  package.json  plugin.html  release-please-config.json  vite.config.ts
.github/workflows/: ci.yml  packaging-sync.yml  packaging.yml  release.yml
docs/: mcp.md  plugin-registry.example.json  plugin-registry.md
docs/development/: README.md
packaging/: README.md
packaging/scripts/: generate_from_release.sh  mirror_to_tap_bucket.sh  msi_product_code.py  validate_manifests.sh
public/icons/: nathan.k@example.net
scripts/: README.md  build_plugin_test_packages.py  check_versions.sh  patch-animal-island-ui.mjs
scripts/brand/: README.md  check.sh  config.sh  element_usage.tsv  generate_all.sh  generate_logo_icons.sh  generate_ui_module.sh  lib.sh  make_tray_template.py  qa_background.sh  slice_elements.sh
scripts/media/: README.md  check_no_originals.sh  optimize_screenshots.sh
src/: App.tsx  main.tsx  plugin-main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  plugin-windows.json
src-tauri/icons/: icon.icns  nathan.k@example.net
src-tauri/prompts/: ai2ui.prompt  alarm_generate.prompt  animal-island-style.prompt  capabilities.prompt  continue_system.prompt  continue_user.prompt  output_contract.prompt  plugin_generate.prompt  plugin_sdk.prompt  system.prompt
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  tray_runtime.rs
src-tauri/src/app/: execute.rs  mod.rs  ports.rs  service.rs
src-tauri/src/commands/: ai.rs  alarms.rs  mod.rs  plugins.rs  system.rs
src-tauri/src/domain/: ai_chat.rs  alarm.rs  argv.rs  error.rs  log_entry.rs  mod.rs  plugin.rs  plugin_registry.rs  prompts.rs  retry.rs  runtime_context.rs  schedule.rs  secret.rs  settings.rs  templates.rs  timezone_detect.rs
src-tauri/src/infra/: ai_models.rs  alarm_sound.rs  autostart.rs  backup.rs  builtin_alarm.rs  mod.rs  paths.rs  process.rs  scheduler.rs  sqlite.rs
src-tauri/src/infra/mcp/: http.rs  mod.rs  params.rs  server.rs  supervisor.rs  tools_alarms.rs  tools_audit.rs  tools_discovery.rs  tools_plugins.rs
src-tauri/src/infra/plugin/: builtins.rs  console_buf.rs  manager.rs  mod.rs  package.rs  runtime.rs  storage.rs  templates.rs
src-tauri/src/infra/plugin/manager/: compose.rs  invoke.rs  mod.rs  package_io.rs
src-tauri/src/infra/process/: external.rs  mod.rs
src-tauri/src/infra/sqlite/: ai_chat.rs  alarms_logs.rs  helpers.rs  migrate.rs  mod.rs
src-tauri/src/tests/: ai_chat_store.rs  ai_models_list.rs  backup_prune.rs  domain_alarm.rs  domain_argv.rs  domain_retry.rs  domain_schedule.rs  legacy_ai_model.rs  mcp_logs.rs  mod.rs  paths_version.rs  plugin_builtins.rs  plugin_manager.rs  plugin_package.rs  plugin_registry.rs  process_timeout.rs  prompts_embed.rs  real_db_next_trigger.rs  scheduler_queue.rs  service_alarm.rs
src-tauri/templates/builtin_plugins/: README.md
src-tauri/templates/builtin_plugins/callai-warmup/: manifest.json  ui.html
src-tauri/templates/builtin_plugins/ledger/: manifest.json  ui.html
src-tauri/templates/builtin_plugins/meal-spin/: manifest.json  ui.html
src-tauri/templates/builtin_plugins/pomodoro/: manifest.json  ui.html
src-tauri/templates/builtin_plugins/shared/: island.css
src-tauri/templates/builtin_plugins/todo/: manifest.json  ui.html
src-tauri/templates/builtin_plugins/work-report/: manifest.json  ui.html
src-tauri/templates/plugin/: babel_boot.html  bridge.js.j2  host_chrome.css  host_panel.js  preconnect.html
src-tauri/templates/plugin_packages/: README.md
src/ai/: chatHistory.ts  generate.ts  parsePluginOutput.ts  parseShared.ts  pluginFixContext.ts  runtimeContext.ts  sendKeyMode.ts  splitModelOutput.ts
src/domain/: alarmRules.test.ts  alarmRules.ts  format.test.ts  format.ts  pluginVersion.ts  timezone.test.ts  timezone.ts  types.ts
src/hooks/: useDebouncedCallback.ts
src/i18n/: index.ts
src/infra/: aiModelsCache.ts  alarmsCache.ts  client.ts  dialog.ts  events.ts  mockApi.ts  settingsCache.ts  tauriApi.ts  timezoneCache.ts  updater.ts
src/pages/: AiChatPage.tsx  EditAlarmPage.tsx  HomePage.tsx  LogsPage.tsx  LogsPanel.tsx  McpLogsPanel.tsx  PluginLogsPanel.tsx  PluginWindowApp.tsx  PluginsPage.tsx  SettingsAiMcpPanel.tsx  SettingsPage.tsx
src/tests/: aiIntent.test.ts  aiModelsCache.test.ts  alarmRules.test.ts  browserSafeFetch.test.ts  chatHistory.test.ts  parsePluginOutput.test.ts  pickerScroll.test.ts  pluginFixContext.test.ts  promptCompose.test.ts  runtimeContext.test.ts  sendKeyMode.test.ts  splitModelOutput.test.ts
src/theme/: README.md  ai-chat-bubbles.css  ai-chat-composer.css  ai-chat-layout.css  ai-chat-markdown.css  ai-chat-message.css  ai-chat.css  chrome-finish.css  dark-forms.css  dark-overlays.css  edit-page.css  fab-base.css  forms.css  global.css  header-actions.css  header-immersive.css  home.css  logs-empty.css  (+19 more)
usecases/: basic.md  detail.md  dev.1.md  i18n.md
(+120 files in other folders)
