[package]
name = "callai"
version = "0.1.0"
description = "callai — a cozy AI window-warming alarm"
authors = ["Yunxuan Youpin"]
edition = "2021"

[lib]
name = "callai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
cron = "0.17"
dirs = "6"
rusqlite = { version = "0.40", features = ["bundled"] }
toml = "1"
uuid = { version = "1", features = ["v4", "serde"] }
which = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
