[package]
name = "callai"
version = "0.1.0"
description = "callai — a cozy AI window-warming alarm"
authors = ["unic <yuniqueunic@gmail.com>"]
edition = "2021"

[lib]
name = "callai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false }

[dependencies]
# tray + PNG template icon for macOS monochrome tray
tauri = { version = "2", default-features = false, features = [
  "wry",
  "tray-icon",
  "image-png",
] }
tauri-plugin-dialog = { version = "2", default-features = false }
tauri-plugin-notification = { version = "2", default-features = false }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
  "serde",
] }
cron = "0.17"
dirs = { version = "6", default-features = false }
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
toml = { version = "1", default-features = false, features = ["parse", "display"] }
uuid = { version = "1", default-features = false, features = ["v4", "std"] }
which = { version = "8", default-features = false, features = ["real-sys"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
  "env-filter",
  "ansi",
] }
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "s"
