[package]
name = "callai"
version = "0.2.7"
description = "callai — a cozy AI window-warming alarm"
license = "MIT"
repository = "https://github.com/YuniqueUnic/callai"
homepage = "https://github.com/YuniqueUnic/callai"
authors = ["unic <yuniqueunic@gmail.com>"]
edition = "2021"

[lib]
name = "callai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false , features = [] }

[dependencies]
# tray + PNG template icon for macOS monochrome tray
tauri = { version = "2", default-features = false, features = [
  "wry",
  "tray-icon",
  "image-png",
  "macos-private-api",
] }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-notification = { version = "2", default-features = false }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
  "serde",
] }
chrono-tz = { version = "0.10", default-features = false }
iana-time-zone = { version = "0.1", default-features = false }
cron = "0.17"
dirs = { version = "6", default-features = false }
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
toml = { version = "1", default-features = false, features = ["parse", "display"] }
uuid = { version = "1", default-features = false, features = ["v4", "std"] }
which = { version = "8", default-features = false, features = ["real-sys"] }
shlex = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
  "env-filter",
  "ansi",
] }
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"] }
ctrlc = { version = "3", default-features = false }
tauri-plugin-opener = "2"
auto-launch = "0.6"
os_info = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "s"
